Add xfce channel to autojoin.

--- a/irssi/config
+++ b/irssi/config
@@ -15,7 +15,8 @@ channels = (
   { name = "#ubuntu-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
   { name = "#debian-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
   { name = "#gentoo-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
-  { name = "#debian"; chatnet = "FREENODE"; autojoin = "yes"; }
+  { name = "#debian"; chatnet = "FREENODE"; autojoin = "yes"; },
+  { name = "#xfce"; chatnet = "FREENODE"; autojoin = "yes"; }
 );
 
 aliases = {
