tmux conf update

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,27 @@
+# use C-a instead of C-b, screen-like
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-bind-key h split-window -v
-bind-key v split-window -h
+# options
+set-option -g mouse-select-pane on
+set-option -g bell-action any
+set-option -g visual-bell on
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
-bind-key R source-file ~/.tmux.conf ; display-message "source-file done"
+setw -g mode-mouse on
+setw -g mode-keys vi
+
+set-option -g status-utf8 on
+set-option -g status-justify left
+
+# split window shortcut
+bind-key h split-window -h
+bind-key v split-window -v
+
+# automatic source config file
+bind-key r source-file ~/.tmux.conf\; display-message "source-file Done."
+
+# develop layout
+bind-key | split-window -h\; split-window -v\; select-layout main-vertical\; select-pane -t 0
