exchange tmux h and v split window shortcut

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,8 +17,8 @@ set-option -g status-utf8 on
 set-option -g status-justify left
 
 # split window shortcut
-bind-key h split-window -h
-bind-key v split-window -v
+bind-key h split-window -v
+bind-key v split-window -h
 
 # automatic source config file
 bind-key r source-file ~/.tmux.conf\; display-message "source-file Done."
