add vim-slime submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/bundle/vim-rails"]
 	path = vim/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
+[submodule "vim/bundle/vim-slime-submodule"]
+	path = vim/bundle/vim-slime-submodule
+	url = git://github.com/jpalardy/vim-slime.git
