--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/bundle/vim-rails-submodule"]
 	path = vim/bundle/vim-rails-submodule
 	url = git://github.com/tpope/vim-rails.git
+[submodule "tmuxifier"]
+	path = tmuxifier
+	url = https://github.com/jimeh/tmuxifier.git
