--- a/irssi/config
+++ b/irssi/config
@@ -12,11 +12,10 @@ servers = (
 chatnets = { FREENODE = { type = "IRC"; }; };
 
 channels = (
+  { name = "#ruby-tw"; chatnet = "FREENODE"; autojoin = "yes"; },
   { name = "#ubuntu-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
   { name = "#debian-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
   { name = "#gentoo-cn"; chatnet = "FREENODE"; autojoin = "yes"; },
-  { name = "#debian"; chatnet = "FREENODE"; autojoin = "yes"; },
-  { name = "#xfce"; chatnet = "FREENODE"; autojoin = "yes"; }
 );
 
 aliases = {
