--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "vim/bundle/ultisnips-submodule"]
 	path = vim/bundle/ultisnips-submodule
 	url = https://github.com/SirVer/ultisnips.git
+[submodule "vim/bundle/vim-snippets-submodule"]
+	path = vim/bundle/vim-snippets-submodule
+	url = https://github.com/honza/vim-snippets.git
+[submodule "vim/bundle/tlib_vim-submodule"]
+	path = vim/bundle/tlib_vim-submodule
+	url = https://github.com/tomtom/tlib_vim.git
