--- a/pip/pip.conf
+++ b/pip/pip.conf
@@ -1,2 +1,3 @@
+# mirrors list: http://www.pypi-mirros.org
 [global]
-index-url = http://pypi.douban.com/simple/
+index-url=http://pypi.hustunique.com/simple
