add vim multi cursors

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/bundle/vim-snippets-submodule"]
 	path = vim/bundle/vim-snippets-submodule
 	url = https://github.com/honza/vim-snippets.git
+[submodule "vim/bundle/vim-multiple-cursors"]
+	path = vim/bundle/vim-multiple-cursors
+	url = https://github.com/terryma/vim-multiple-cursors.git
