--- a/pip/pip.conf
+++ b/pip/pip.conf
@@ -1,3 +1,3 @@
 # mirrors list: http://www.pypi-mirros.org
-[global]
-index-url=http://http://pypi.douban.com/simple
+#[global]
+#index-url=http://http://pypi.douban.com/simple
