--- a/pip/pip.conf
+++ b/pip/pip.conf
@@ -1,3 +1,5 @@
 # mirrors list: http://www.pypi-mirros.org
 [global]
 index-url=http://mirrors.ustc.edu.cn/pypi/web/simple/
+
+trusted-host=mirrors.ustc.edu.cn
